assets/css/custom.css
/* ... */
ol.thumb-grid li {
  float: left;
  width:  150px;
  height:  200px;
  margin:  20px 20px 20px 10px;
  list-style-type:  none;
}

ol.thumb-grid li img  {
  width:  100%;
  margin-bottom:  5px;
}

.caption-press  {
  line-height:  1.2;
  font-size:  70%;
  margin-bottom:  5px;
}

a {
  text-decoration:  underline;
}

a.no-underline {
  text-decoration:  none;
}

#social-media-links .links a {
  padding:  6px;
}

#social-media-links .links  {
  margin-bottom:  40px;
}

footer.footer  {
  background-color:  #070b26;
  color:  #d3dbf7;
  font-family:  "Open Sans", sans-serif;
  font-size: 0.8em;
  line-height: 1.75em;
}

footer.footer a {
  color:  #bbc7cc;
  font-weight:  700;
}

h2, h3, h4 {
  font-weight: bold;
}

#mobile-hamburger {
  position: fixed;
  top:14px;
  right: 11px;
  cursor: pointer;
  width: 51px;
  height: 35px;
}

#mobile-hamburger span {
  position: absolute;
  display: block;
  left: 0%;
  height: 9px;
  width: 100%;
  background-color: #D5C87D;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .2s ease-in-out;
  -moz-transition: .2s ease-in-out;
  -o-transition: .2s ease-in-out;
  transition: .2s ease-in-out;
}

#mobile-hamburger span:nth-child(1){
  top: 0;
}

#mobile-hamburger span:nth-child(2){
  top: 19px;

}

#mobile-hamburger span:nth-child(3){
  top: 38px;
}

#mobile-hamburger span:nth-child(4){
  top: 19px;
}

#mobile-hamburger span:nth-child(5){
  top: 19px;
}

#mobile-hamburger.open span:nth-child(1){
  top: 50%;
  left: 50%;
  width: 0;
  opacity: 0;
}

#mobile-hamburger.open span:nth-child(2){
  opacity: 0;
  left: 50%;
  width: 0;
}

#mobile-hamburger.open span:nth-child(3){
  top: 50%;
  left: 50%;
  width: 0;
  opacity: 0;
}

#mobile-hamburger.open span:nth-child(4){
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

#mobile-hamburger.open span:nth-child(5){
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.affix-top, .affix-bottom {
  position: absolute;
}

/* october rework */
  
/*
section.module.parallax-chambers {
    background-image: url(../img/parallax-mansion-front.jpg);
}
section.module.parallax-tips {
    background-image: url(../img/parallax-heavens.jpg);
}
section.module.parallax-faqs {
    background-image: url(../img/parallax-cats.jpg);
}
section.module.parallax-location {
    background-image: url(../img/parallax-river.jpg);
}
section.module.parallax-sign-up {
}
*/

#how-to-play {
  text-align: center;
  background-color: #5F567C;
  padding: 20px 80px;
}

#how-to-play .blurb {
  padding: 10px 13px;
  background-color: #FFFCDF;
  margin-bottom: 40px;
  font-size: 10pt;
  font-weight: normal;
  line-height: 2.0;
  text-align: left;
  height: 273px;
  font-family:sans-serif;
}


#how-to-play h2 {
  font-family: Merriweather, Georgia, serif;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #D5C87D;
  font-size: 42pt;
}

#how-to-play table img {
}

#how-to-play .tip {
  font-size: 14pt;
  padding-top: 52px;
  color: #CBCDCE;
  letter-spacing:1pt;
  font-family:sans-serif;
}

#how-to-play .nav-button {
  margin: -15px;
  margin-bottom: 53px;
}

.nav-button {
  text-align: center;
}

.nav-button a {
  text-decoration: none;
  font-size:10pt;
  background-color: white;
  font-family: Roboto, sans-serif;
  font-weight: bold;
  color: #2F2F30;
  border: 1px solid #2F2F30;
  padding: 7px 30px;
  letter-spacing: 2px;
  cursor: pointer;
  text-transform: uppercase;
}

#how-to-play .heading {
  font-family: Roboto, sans-serif;
  font-size: 16pt;
  margin-bottom: 10px;
  white-space: nowrap;
}

#how-to-play .icon {
  margin-bottom: 0px;
}

#how-to-play .step {
  width: 232px;
  padding: 15px;
  display: inline-block;
  vertical-align: top;
  background-color:#FFFCDF;
  border-radius:15px;
  margin-left:55px;
}

#how-to-play .clear {
  clear: both;
}

@media screen and (max-width:768px) {
  #how-to-play {
    padding: 20px 10px;
  }

  #how-to-play h2 {
    font-size: 24pt;
  }

  #how-to-play .step {
        /* width: 100%; */
    padding: 0;
    margin-left: 0;
    margin-top: 20px;
  }
}

  #how-to-play .icon {
    margin-bottom: 15px;
  }
@media screen and (min-width: 1600px) {
  #how-to-play .step {
   background-color:#FFFCDF;
  }

  #how-to-play .clear {
    clear: none;
  }
}

#rooms {
  padding: 0;
  color: #404040;
  position: relative;
  overflow: hidden;
  height: 861px;
  background-image: url("../img/bg-rooms.jpg");
  background-size: 100% auto;
  background-position: center;
  background-repeat: no-repeat;
}

@media screen and (max-width:1447px) {

  #rooms {
    background-size: auto 100%;
  }
}


#rooms img {width:100%;
}


#rooms h2 {
  font-size: 32pt;
  font-family: Merriweather, Georgia, serif;
  letter-spacing: 1px;
  margin: 0;
  color: #D5C87D;
  text-transform: uppercase;

}

#rooms p {
  line-height: 2.0;
  font-size: 10pt;
  margin: 0;
}

#rooms .copy {
  width: 400px;
  background-color: #6C3B4A;
  position: absolute;
  top: 275px;
  left: 25%;
  text-align: center;
  color: #D5C87D;
  padding: 47px 69px 22px 69px;
}


#rooms hr {
  border-color: #D5C87D;
  width: 170px; 

}

#rooms hr.line-one {
    margin-top: 0;
    margin-bottom: 6px

}

#rooms hr.line-two {
    margin-top: 6px;
    margin-bottom: 29px

}

@media screen and (max-width:768px) {
  #rooms .copy {
    width: 100%;
    margin: auto;
  }
}

.clear-both {
  clear: both;
}

.container-room {
  background-color: #E1E0ED;
  padding: 20px 40px;
  padding-left: 80px;
}

.container-room .clamp {
  width: 1000px;
  margin: auto;
  margin-top:52px;
}

.container-room .icon {
  width: 32px;
  height: 32px;
  display: inline-block;
  margin-bottom: -12px;
}

.container-room .room-duration-icon {
  background: url("../img/room-duration-icon.svg");
  background-size: 32px 32px;
}
/* ... */

